// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BridgeCTAButton should disable the component when quotes are loading and there are no existing quotes 1`] = `<div />`;

exports[`BridgeCTAButton should render the component when amount and dest token is missing 1`] = `
<div>
  <p
    class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default text-center"
  >
    Select amount
  </p>
</div>
`;

exports[`BridgeCTAButton should render the component when amount, dest chain and dest token are missing (defaults set 1`] = `
<div>
  <p
    class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default text-center"
  >
    Select amount
  </p>
</div>
`;

exports[`BridgeCTAButton should render the component when quotes are loading and market is closed (no quotes) 1`] = `<div />`;

exports[`BridgeCTAButton should render the component when quotes are loading and recipient address is not set (no quotes) 1`] = `<div />`;

exports[`BridgeCTAButton should render the component's initial state 1`] = `
<div>
  <p
    class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default text-center"
  >
    Select token
  </p>
</div>
`;
